--- a/_includes/short-about.html
+++ b/_includes/short-about.html
@@ -1,4 +1,4 @@
-<section class="visible-md visible-lg">
+<!-- <section class="visible-md visible-lg">
   <hr>
   <h5><a href="{{'/about/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
   <div class="short-about">
@@ -7,8 +7,8 @@
     {% endif %}
     {% if site.sidebar-about-description %}
     <p>{{site.sidebar-about-description}}</p>
-    {% endif %}
+    {% endif %} -->
     <!-- SNS Link -->
-    {% include sns-links.html %}
+    <!-- {% include sns-links.html %}
   </div>
-</section>
+</section> -->
